--- a/includes/_03_quickstart.adoc
+++ b/includes/_03_quickstart.adoc
@@ -52,7 +52,7 @@ Most interface options exist within the "View" menu. <<figure-3.02>>
 .Figure 3.02
 {view-menu}
 
-The size of the toolbar icons is increased within <<figure-3.01>>. Icon size can be increased by selecting “Increase Toolbar Icon Size” or decreased with the “Decrease Toolbar Icon Size” option.
+The size of the toolbar icons is enlarged within <<figure-3.01>>. Icon size can be increased by selecting “Increase Toolbar Icon Size” or decreased with the “Decrease Toolbar Icon Size” option.
 
 === Node Management
 
@@ -124,7 +124,7 @@ If you have previously saved the current document, you do not need to perform st
 .Figure 3.09
 {save-menu}
 
-. If this is your first time saving the current document, you will be prompted to select a save type, as shown in <<figure-3.10>>. If you are unsure which type to select, please visit the link:#_saving[save section] for more details. +
+. If this is your first time saving the current document, you will be prompted to select a save type, as shown in <<figure-3.10>>. If you are unsure which type to select, please visit the link:#_save_type[save type section] for more details. +
 +
 [[figure-3.10]]
 .Figure 3.10
