--- a/includes/__variables.adoc
+++ b/includes/__variables.adoc
@@ -18,6 +18,7 @@
 :cherrytree-ppa-web: https://launchpad.net/~giuspen/+archive/ubuntu/ppa
 :cherrytree-ppa: ppa:guipsen/ppa
 :7zip: https://www.7-zip.org/
+:vacuum: https://www.sqlite.org/lang_vacuum.html
 
 // Icons
 :tree-node-add: image:images/icons/tree-node-add.png[Tree Node Add]
