--- a/includes/_02_installation.adoc
+++ b/includes/_02_installation.adoc
@@ -120,4 +120,6 @@ Reference the {changelog}[changelog] to determine the latest version. +
 .Figure 2.15
 {wininstall06}
 
-*Note:* If you have a previous version of Cherrytree installed, an error may occur when trying to overwrite “dbus-daemon.exe”. If so, please skip the overwrite and restart your computer, then try again.
+NOTE: If you have a previous version of Cherrytree installed, an error may occur when trying to overwrite “dbus-daemon.exe”. If so, please skip the overwrite and restart your computer, then try again.
+
+=== Building from Source
