--- a/includes/_05_files.adoc
+++ b/includes/_05_files.adoc
@@ -1,6 +1,6 @@
 == Files
 
-Documents can be managed from the "File" menu, shown in <<figure-4.01>>, or the toolbar, <<figure-4.02>>.
+Documents can be managed from the *File* menu, shown in <<figure-4.01>>, or the toolbar, <<figure-4.02>>.
 
 [[figure-4.01]]
 .Figure 4.01
@@ -12,9 +12,9 @@ Documents can be managed from the "File" menu, shown in <<figure-4.01>>, or the 
 
 === Creating and Opening
 
-Cherrytree opens to the same state as when it last closed or to a new document if no previous state exists. To create a new document, click "File" within the menu bar and select the "New Instance" option.
+Cherrytree opens to the same state as when it last closed or to a new document if no previous state exists. To create a new document, click *File* within the menu bar and select *New Instance*.
 
-To open an existing file, click "File" and select the "Open File" option, then select a document and click "Open." Recently used documents can be opened more quickly by selecting the document name within the "Recent Files" submenu. <<figure-4.03>>
+To open an existing file, click *File* and select *Open File*, then select a document and click *Open*. Recently used documents can be opened more quickly by selecting the document name within the *Recent Files* submenu. <<figure-4.03>>
 
 [[figure-4.03]]
 .Figure 4.03
@@ -23,14 +23,14 @@ To open an existing file, click "File" and select the "Open File" option, then s
 === Saving
 
 ==== Saving to the Current File
-To save your document, hold "Ctrl" and press the "s" key, or click "File" within the menu bar and select the "Save" option.
+To save your document, hold *Ctrl* and press the *s* key, or click *File* within the menu bar and select *Save*.
 
 NOTE: If this is your first time saving the current document, please see the link:#_saving_to_a_new_file[save to a new file section] below.
 
 ==== Saving to a New File
 
 [start=1]
-. To save your document to a new file, press the "s" key while holding "Ctrl" and "Shift", or click "File" within the menu bar and select the "Save As" option.
+. To save your document to a new file, press the *s* key while holding *Ctrl* and *Shift*, or click *File* within the menu bar and select *Save As*.
 
 . You will be prompted to select a storage type, as shown in <<figure-4.06>>. If you are unsure which type to select, please visit the link:#_storage_types[storage type section] for more details. +
 +
@@ -56,13 +56,13 @@ Visit the {vacuum}[SQLite documentation page for the vacuum command] to learn mo
 
 When saving your document for the first time, Cherrytree prompts you to choose between two file formats, SQLite and XML.
 
-*SQLite* is a self-contained database and will have a ".ctb" or ".ctx" extension when used with Cherrytree. Instead of loading the complete document at runtime, Cherrytree will only access the tree structure and currently selected node. This makes opening your document faster, but may slow functions such as searching and selecting nodes when they're used for the first time. 
+*SQLite* is a self-contained database and will have a *.ctb* or *.ctx* extension when used with Cherrytree. Instead of loading the complete document at runtime, Cherrytree will only access the tree structure and currently selected node. This makes opening your document faster but may slow functions such as searching and selecting nodes when they're used for the first time. 
 
 Performance loss with SQLite is lower than with XML, making it better suited for larger documents.
 
 NOTE: SQLite files should be link:#_save_and_vacuum[vacuumed] periodically. 
 
-*XML* is a markup language and will have a ".ctd" or  ".ctz" extension when used with Cherrytree. The files will be fully loaded at runtime, making searching and navigating through nodes faster, but slowing the initial load time.
+*XML* is a markup language and will have a *.ctd* or  *.ctz* extension when used with Cherrytree. The files will be fully loaded at runtime, making searching and navigating through nodes faster, but slowing the initial load time.
 
 XML is more accessible and easier to convert to other file types, but should not be used with large documents. 
 
@@ -74,12 +74,40 @@ NOTE: Other applications might not provide functionality to unlock files that ha
 
 ==== Changing Passwords
 
-To change the password of a protected file, open the file in Cherrytree then click "File > Save-as." Follow the link:#_saving_to_a_new_file[steps to save as a new document] and select a protected storage type. Use your new password to protect this copy of the document. 
+To change the password of a protected file, open the file in Cherrytree then click *File > Save-as*. Follow the link:#_saving_to_a_new_file[steps to save as a new document] and select a protected storage type. Use your new password to protect this copy of the document. 
 
-=== Printing
+=== Page Setup and Printing
 
-=== Searching
+*Page Setup*, found in the *File* menu, allows you to set your document size, orientation, and margins.
+
+To *print a document*, click *File > Print* and when prompted, choose between one of the following options:
+
+* Selected Text Only
+* Selected Node Only
+* Selected Node and Subnodes
+* All the Tree
+
+Select *New Node in New Page* to apply page breaks at the end of nodes within the printed document. <<figure-4.08>>
+
+[[figure-4.08]]
+.Figure 4.08
+{newnodenewpage}
 
 === Importing
 
 === Exporting
+
+==== HTML
+
+When exporting to HTML, all Nodes will be copied to the root folder of your chosen directory as HTML files. The main html file will be named *index.html*.
+
+[start=1] 
+. Click *Export to HTML* under the *Export* menu. 
+. Select the scope of your document to be exported:
+.. Selected Text Only
+.. Selected Node Only
+.. Selected Node and Subnodes
+.. All in Tree
+. Additional options:
+.. *Include Node name* displays the name of each Node at the top of its page. This may be redundant if you have headers within the pages of your notes.
+.. *Links Tree in Every Page* When enabled all nodes will contain a table of contents. Otherwise if this option is disabled, only the index.html document will contain a table of contents.
