--- a/includes/_06_nodes.adoc
+++ b/includes/_06_nodes.adoc
@@ -1,6 +1,6 @@
 == Nodes
 
-In computer science, a tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <<figure-5.01>>, "my_book" is the root node. "Part 3" is one of three child nodes that belong to "my_book" and is also the parent node of "Chapter 6". 
+In computer science, a tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <<figure-5.01>>, *my_book* is the root node. *Part 3* is one of three child nodes that belong to *my_book* and is also the parent node of *Chapter 6*. 
 
 [[figure-5.01]]
 .Figure 5.01
